// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1gib1rw-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 16px);
}

.css-1gib1rw-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea::placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.css-1gib1rw-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.css-1gib1rw-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.css-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

.css-1ol78el-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.css-1ol78el-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-1fmk7r4-StyledRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="css-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="true"
        class="css-1gib1rw-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
        id=":rk:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="css-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      >
        <svg
          class="css-1ol78el-sizeStyles e1gt4cfo0"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.45455C6.38505 3.45455 3.45455 6.38505 3.45455 10C3.45455 13.615 6.38505 16.5455 10 16.5455C13.615 16.5455 16.5455 13.615 16.5455 10C16.5455 6.38505 13.615 3.45455 10 3.45455ZM2 10C2 5.58172 5.58172 2 10 2C14.4183 2 18 5.58172 18 10C18 14.4183 14.4183 18 10 18C5.58172 18 2 14.4183 2 10ZM10 6.84848C10.4017 6.84848 10.7273 7.1741 10.7273 7.57576V10.6061C10.7273 11.0077 10.4017 11.3333 10 11.3333C9.59834 11.3333 9.27273 11.0077 9.27273 10.6061V7.57576C9.27273 7.1741 9.59834 6.84848 10 6.84848ZM9.27273 13.0303C9.27273 12.6286 9.59834 12.303 10 12.303H10.0061C10.4077 12.303 10.7333 12.6286 10.7333 13.0303V13.0364C10.7333 13.438 10.4077 13.7636 10.0061 13.7636H10C9.59834 13.7636 9.27273 13.438 9.27273 13.0364V13.0303Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-1fmk7r4-StyledRow e3f5lzv0"
    >
      <div>
        <p
          class="css-vdlwt8-StyledText e13y3mga0"
        >
          success
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-1gib1rw-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 16px);
}

.css-1gib1rw-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea::placeholder {
  color: #727683;
}

.css-1gib1rw-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.css-1gib1rw-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.css-1gib1rw-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.css-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.css-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

.css-m1zjrh-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-m1zjrh-sizeStyles .fillStroke {
  stroke: #22674e;
  fill: none;
}

.css-1fmk7r4-StyledRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="css-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="css-1gib1rw-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
        id=":rg:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="css-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      >
        <svg
          class="css-m1zjrh-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.0001 2.76373C5.10813 2.76373 2.76373 5.10813 2.76373 8.0001C2.76373 10.8921 5.10813 13.2365 8.0001 13.2365C10.8921 13.2365 13.2365 10.8921 13.2365 8.0001C13.2365 5.10813 10.8921 2.76373 8.0001 2.76373ZM1.6001 8.0001C1.6001 4.46548 4.46548 1.6001 8.0001 1.6001C11.5347 1.6001 14.4001 4.46548 14.4001 8.0001C14.4001 11.5347 11.5347 14.4001 8.0001 14.4001C4.46548 14.4001 1.6001 11.5347 1.6001 8.0001ZM10.2777 6.07211C10.5391 6.25888 10.5997 6.62225 10.4129 6.88373L7.98869 10.2777C7.88929 10.4168 7.73368 10.5052 7.56324 10.5193C7.39279 10.5334 7.22478 10.4718 7.10384 10.3509L5.6493 8.89635C5.42208 8.66914 5.42208 8.30075 5.6493 8.07354C5.87651 7.84632 6.2449 7.84632 6.47211 8.07354L7.44101 9.04243L9.46605 6.20738C9.65282 5.9459 10.0162 5.88534 10.2777 6.07211Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="css-1fmk7r4-StyledRow e3f5lzv0"
    >
      <div>
        <p
          class="css-1n7fwv3-StyledText e13y3mga0"
        >
          success
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-9412ib-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.css-9412ib-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea::placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.css-9412ib-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.css-9412ib-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-9412ib-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-9412ib-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.css-9412ib-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="css-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="css-9412ib-StyledTextArea enu776d0"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
        disabled=""
        id=":ra:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="css-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-9412ib-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.css-9412ib-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea::placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.css-9412ib-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.css-9412ib-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-9412ib-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-9412ib-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.css-9412ib-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="css-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="css-9412ib-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
        id=":rd:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="css-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly with basic props 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-9412ib-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.css-9412ib-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea::placeholder {
  color: #727683;
}

.css-9412ib-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.css-9412ib-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.css-9412ib-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-9412ib-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-9412ib-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.css-9412ib-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.css-9412ib-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="css-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="css-9412ib-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
        id=":r0:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="css-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;
